update: add post 4, 5

--- a/_posts/2023-03-03-3.md
+++ b/_posts/2023-03-03-3.md
@@ -2,7 +2,7 @@
 title: 가상 돔(Virtual DOM) 알아보기
 date: 2023-03-03 14:09:00 +0900
 categories: [Libraries, React]
-tags: [react, 리액트, jsx, javascript xml, javascript, xml, camel case, virtual dom, 가상 dom, 삼항연산자, 주석]
+tags: [react, 리액트, virtual dom, 가상 dom, diffing]
 image:
     path: /assets/img/2023-03-03-3/2023-03-03-3-1.jpg
     alt: https://velog.io/@tamxt4047/가상-돔vertual-DOM
