--- a/_posts/2023-03-03-2.md
+++ b/_posts/2023-03-03-2.md
@@ -1,5 +1,5 @@
 ---
-title: JSX(JavaScript XML) 알아보기
+title: "[React] JSX(JavaScript XML) 알아보기"
 date: 2023-03-03 14:09:00 +0900
 categories: [Libraries, React]
 tags: [react, 리액트, jsx, javascript xml, javascript, xml, camel case, virtual dom, 가상 dom, 삼항연산자, 주석]
@@ -8,7 +8,7 @@ image:
     alt: https://velog.io/@nrudev/JSX
 ---
 
-JSX는 JavaScript XML의 약자로, 리액트 컴포넌트의 독립화에 최적화된 언어입니다. JSX는 XML에 코딩하는 것처럼 HTML 코드를 JS 파일에 넣을 수 있습니다. 이러면 별도의 HTML 파일 호출 없이, <u>하나의 JS 파일로 하나의 컴포넌트를 완전히 구현</u>할 수 있습니다.
+JSX는 JavaScript XML의 약자로, 리액트 컴포넌트의 독립화에 최적화된 언어입니다. JSX는 XML에 코딩하는 것처럼 HTML 코드를 JS 파일에 넣을 수 있습니다. 이러면 별도의 HTML 파일 호출 없이, **하나의 JS 파일로 하나의 컴포넌트를 완전히 구현**할 수 있습니다.
 
 > JSX는 리액트의 개발을 위해 만든 언어이기 때문에, 리액트와 마찬가지로 공식 자바스크립트 문법이 아닙니다.
 
@@ -116,7 +116,7 @@ function App() {
 
 ### 문법 4. if문 대신 삼항연산자를 사용한다.
 
-JSX 내부에서는 `if`문 대신 삼항연산자를 사용합니다. 왜 그런지 찾아보니 `if`문이 자바스크립트 표현식이 아니어서라고 합니다. `if`문이 표현식이 아닌 이유는 <u>표현식은 그 자체로 값을 가지거나, 어떤 것에 값을 할당하는 것</u>이어야 되는데, `if`문은 조건은 만들지만 결과를 특정하지는 않기 때문이라고 이해했습니다.
+JSX 내부에서는 `if`문 대신 삼항연산자를 사용합니다. 왜 그런지 찾아보니 `if`문이 자바스크립트 표현식이 아니어서라고 합니다. `if`문이 표현식이 아닌 이유는 **표현식은 그 자체로 값을 가지거나, 어떤 것에 값을 할당하는 것**이어야 되는데, `if`문은 조건은 만들지만 결과를 특정하지는 않기 때문이라고 이해했습니다.
 
 📌 JSX 외부에서 사용
 
