--- a/_posts/2023-03-03-5.md
+++ b/_posts/2023-03-03-5.md
@@ -12,13 +12,13 @@ image:
 
 하지만 리액트를 설치하기 전에, 먼저 Node.js라는 프로그램을 설치해야 합니다.
 
-노드는 Chrome V8 JavaScript 엔진으로 빌드된 자바스크립트 런타임입니다. 쉽게 말하면 노드는 <u>자바스크립트를 브라우저 없이 컴퓨터에서 실행할 수 있게 하는 자바스크립트 실행기</u>입니다.
+노드는 Chrome V8 JavaScript 엔진으로 빌드된 자바스크립트 런타임입니다. 쉽게 말하면 노드는 **자바스크립트를 브라우저 없이 컴퓨터에서 실행할 수 있게 하는 자바스크립트 실행기**입니다.
 
 &nbsp;
 
 ### 자바스크립트 런타임
 
-런타임은 <u>특정 언어를 실행할 수 있는 환경</u>을 뜻합니다. 대표적인 자바스크립트 런타임은 Chrome, Safafi 같은 웹 브라우저들입니다.
+런타임은 **특정 언어를 실행할 수 있는 환경**을 뜻합니다. 대표적인 자바스크립트 런타임은 Chrome, Safafi 같은 웹 브라우저들입니다.
 
 &nbsp;
 
@@ -33,7 +33,7 @@ _https://umbum.dev/913_
 
 ### 논 블로킹
 
-논 블로킹은 <u>비동기 방식으로 이벤트를 처리</u>한다는 뜻입니다. 비동기는 이전 작업이 완료될 때까지 대기하지 않고 동시에 작업을 수행합니다.
+논 블로킹은 **비동기 방식으로 이벤트를 처리한다는 뜻**입니다. 비동기는 이전 작업이 완료될 때까지 대기하지 않고 동시에 작업을 수행합니다.
 
 ![Non Blocking](/assets/img/2023-03-03-5/2023-03-03-5-3.png)
 _https://velog.io/@dorazi/Asynchronous-VS-Synchronous_
@@ -80,13 +80,13 @@ console.log("3rd");
 2nd
 ```
 
-setTimeout() 함수의 지연시간이 0이기 때문에 1st, 2nd, 3rd 순으로 찍힐 거라 예상했지만, 예상외로 1st, 3rd, 2nd가 찍혔습니다. 이유는 <u>비동기적 코드는 동기적 코드가 전부 실행되고 나면 실행되기 때문</u>입니다.
+setTimeout() 함수의 지연시간이 0이기 때문에 1st, 2nd, 3rd 순으로 찍힐 거라 예상했지만, 예상외로 1st, 3rd, 2nd가 찍혔습니다. 이유는 **비동기적 코드는 동기적 코드가 전부 실행되고 나면 실행되기 때문**입니다.
 
 &nbsp;
 
 ### 싱글 스레드
 
-스레드는 <u>프로세스가 동시에 처리가능한 작업의 개수</u>입니다. 프로세스가 스레드를 여러 개 생성해 동시에 작업하면 멀티 스레드, 하나만 생성하면 싱글스레드입니다.
+스레드는 **프로세스가 동시에 처리가능한 작업의 개수**입니다. 프로세스가 스레드를 여러 개 생성해 동시에 작업하면 멀티 스레드, 하나만 생성하면 싱글스레드입니다.
 
 ![Single thread](/assets/img/2023-03-03-5/2023-03-03-5-4.png)
 _https://velog.io/@gil0127/싱글스레드Single-thread-vs-멀티스레드-Multi-thread-t5gv4udj_
