fix: change incorrect absolute path

--- a/_posts/2023-03-15-13.md
+++ b/_posts/2023-03-15-13.md
@@ -24,7 +24,7 @@ image:
 
 &nbsp;
 
-[깃북 테마 설치하기](/_posts/2023-03-15-10.md#선택-사항-댓글-기능-설정)에서, `root > node_modules > gitbook-plugin-comment > index.js`{: .filepath }의 url을 변경하는 부분이 있었습니다. 이전에 수정했다면 따로 수정할 필요는 없습니다.
+[깃북 테마 설치하기](/posts/10#선택-사항-댓글-기능-설정)에서, `root > node_modules > gitbook-plugin-comment > index.js`{: .filepath }의 url을 변경하는 부분이 있었습니다. 이전에 수정했다면 따로 수정할 필요는 없습니다.
 
 ![utterances 2](/assets/img/2023-03-15-13/2023-03-15-13-3.jpg)
 
