--- a/_posts/2023-03-15-11.md
+++ b/_posts/2023-03-15-11.md
@@ -14,7 +14,7 @@ image:
 
 로컬에서 접속하려면, 먼저 gitbook-cli가 설치되어 있어야 합니다.
 
-[gitbook-cli 설치하기](/_posts/2023-03-15-10.md#gitbook-cli-설치하기)
+[gitbook-cli 설치하기](/posts/10#gitbook-cli-설치하기)
 
 &nbsp;
 
