feat: add new posts

--- a/_posts/2023-03-16-16.md
+++ b/_posts/2023-03-16-16.md
@@ -4,7 +4,7 @@ date: 2023-03-16 09:55:00 +0900
 categories: [DevOps, Git]
 tags: [git, 깃, gitignore, devops, 데브옵스]
 image:
-    path: /assets/img/2023-03-16-16/2023-03-16-16-1.jpg
+    path: /assets/img/2023-03-16-16/2023-03-16-16-1.png
 ---
 
 ### .gitignore란?
@@ -84,7 +84,7 @@ folderName/**/fileName.txt
 
 루트 폴더에서 `.gitignore`{: .filepath } 파일을 찾고, 수정사항을 적은 후, 깃 저장소에 push 해주면 적용 완료됩니다.
 
-![적용 방법](/assets/img/2023-03-16-16/2023-03-16-16-1.jpg)
+![적용 방법](/assets/img/2023-03-16-16/2023-03-16-16-2.jpg)
 
 &nbsp;
 
