--- a/_posts/2023-03-28-17.md
+++ b/_posts/2023-03-28-17.md
@@ -33,17 +33,17 @@ image:
 
 &nbsp;
 
-이제 이 텍스트를 `<pre>` 태그 안에 넣어 보았다.
+이제 이 텍스트를 `<pre>` 태그 안에 넣어 보면,
 
 ![ASCII Art 4](/assets/img/2023-03-28-17/2023-03-28-17-5.png)
 
 &nbsp;
 
-로컬에서 다시 확인해 보면, 아래와 같이 줄 바꿈과 띄어쓰기가 그대로 표현이 되는 걸 볼 수 있습니다.
+아래와 같이 줄 바꿈과 띄어쓰기가 그대로 표현이 되는 걸 볼 수 있습니다.
 
 ![ASCII Art 5](/assets/img/2023-03-28-17/2023-03-28-17-6.png)
 
-> 그림에서 역슬래시(\)가 원 기호(￦)로 바뀌어 있는데, 역슬래시와 원 기호의 키 세팅이 같아서, 브라우저 언어 환경에 따라 종종 바뀌어서 렌더링 되는 현상입니다.
+> 그림에서 역슬래시(`\`{: .filepath })가 원 기호(`￦`{: .filepath })로 바뀌어 있는데, 역슬래시와 원 기호의 키 세팅이 같아서, 브라우저 언어 환경에 따라 바뀌어서 렌더링 되는 현상입니다.
 {: .prompt-tip }
 
 위처럼 텍스트의 줄 바꿈과 띄어쓰기를 그대로 표현하고 싶을 때, 예를 들어 코드 블록을 그대로 표현하고 싶다거나, 책의 문장을 그대로 긁어올 경우, 일일이 `<br>` 태그를 넣지 않고,  `<pre>` 태그를 사용해 손쉽게 줄 바꿈을 표현할 수 있습니다.
