--- a/_posts/2023-04-05-18.md
+++ b/_posts/2023-04-05-18.md
@@ -4,8 +4,7 @@ date: 2023-04-05 00:55:00 +0900
 categories: [Libraries, React]
 tags: [react, 리액트, ref, useref]
 image:
-    path: /assets/img/2023-04-05-18/2023-04-05-18-1.webp
-    alt: https://blog.alexdevero.com/reacts-useref-hook/
+    path: /assets/img/2023-04-05-18/2023-04-05-18-1.png
 ---
 
 ### 셀렉트 박스 외 영역 클릭 시 포커스 해제
