fix: change incorrect internal path

--- a/_posts/2023-04-10-19.md
+++ b/_posts/2023-04-10-19.md
@@ -33,7 +33,7 @@ https://유저아이디.github.io/저장소이름
 
 ### 2. 도메인 구매
 
-입력한 도메인이 사용 중이 아닐 경우, 구매하기를 눌러 해당 도메인을 구매하면 됩니다. 제 아이디가 taedonn이라 [www.taedonn.com](www.taedonn.com)을 검색해 봤는데, 이미 등록된 도메인이라고 나왔습니다. 왜냐하면 제가 이미 구매했기 때문입니다. 😋
+입력한 도메인이 사용 중이 아닐 경우, 구매하기를 눌러 해당 도메인을 구매하면 됩니다. 제 아이디가 taedonn이라 <a href="https://taedonn.com" target="_blank">www.taedonn.com</a>을 검색해 봤는데, 이미 등록된 도메인이라고 나왔습니다. 왜냐하면 제가 이미 구매했기 때문입니다. 😋
 
 ![도메인 구매](/assets/img/2023-04-10-19/2023-04-10-19-2.png)
 
