--- a/_posts/2024-04-22-38.md
+++ b/_posts/2024-04-22-38.md
@@ -5,7 +5,7 @@ categories: [정보처리기사]
 tags: [정보처리기사, 정처기, software life cycle, 소프트웨어 생명 주기, life cycle, 생명 주기, life cycle model, 생명 주기 모형, waterfall model, 폭포수 모형, prototype model, 프로토타입 모형, spiral model, 나선형 모델, agile model, 애자일 모형, agile, 애자일, scrum, 스크럼]
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
-    alt: 2020 시나공 정보처리기사 필기
+    alt: 시나공 정보처리기사 필기
 ---
 
 ### 소프트웨어 생명 주기(Software Life Cycle)
