포스트 추가 - #42 ~ #45

--- a/_posts/2024-04-22-38.md
+++ b/_posts/2024-04-22-38.md
@@ -1,5 +1,5 @@
 ---
-title: "[정보처리기사] 소프트웨어 생명 주기"
+title: "[정보처리기사] #1 소프트웨어 생명 주기"
 date: 2024-04-22 10:29:00 +0900
 categories: [정보처리기사]
 tags: [정보처리기사, 정처기, software life cycle, 소프트웨어 생명 주기, life cycle, 생명 주기, life cycle model, 생명 주기 모형, waterfall model, 폭포수 모형, prototype model, 프로토타입 모형, spiral model, 나선형 모델, agile model, 애자일 모형, agile, 애자일, scrum, 스크럼]
