--- a/_posts/2024-04-22-39.md
+++ b/_posts/2024-04-22-39.md
@@ -1,8 +1,8 @@
 ---
-title: "[정보처리기사] 스크럼(Scrum) 기법"
+title: "[정보처리기사] #2 스크럼(Scrum) 기법"
 date: 2024-04-22 17:01:00 +0900
 categories: [정보처리기사]
-tags: [scrum, 스크럼, po, product owner, 제품 책임자, scrum master, 스크럼 마스터, dt, development team, 개발팀, product backlog, 제품 백로그, backlog, 백로그, sprint planning meeting, 스프린트 계획 회의, sprint, 스프린트, daily scrum meeting, 일일 스크럼 회의, sprint review, 스프린트 검토 회의, sprint retrospective, 스프린트 회고]
+tags: [정보처리기사, 정처기, scrum, 스크럼, po, product owner, 제품 책임자, scrum master, 스크럼 마스터, dt, development team, 개발팀, product backlog, 제품 백로그, backlog, 백로그, sprint planning meeting, 스프린트 계획 회의, sprint, 스프린트, daily scrum meeting, 일일 스크럼 회의, sprint review, 스프린트 검토 회의, sprint retrospective, 스프린트 회고]
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
