--- a/_posts/2024-04-22-40.md
+++ b/_posts/2024-04-22-40.md
@@ -1,8 +1,8 @@
 ---
-title: "[정보처리기사] XP(eXtreme Programming) 기법"
+title: "[정보처리기사] #3 XP(eXtreme Programming) 기법"
 date: 2024-04-22 17:44:00 +0900
 categories: [정보처리기사]
-tags: [agile, 애자일, 개발 기법, xp, extreme programming, 익스트림 프로그래밍, user story, 사용자 스토리, release planning, 릴리즈 계획 수립, spike, 스파이크, iteration, 이터레이션, acceptance test, 승인 검사, small release, 소규모 릴리즈, pair programming, 짝 프로그래밍, test-driven development, tdd, 테스트 주도 개발, whole team, 전체 팀, continuous integration, 계속적인 통합, design improvement, 디자인 개선, refactoring, 리팩토링]
+tags: [정보처리기사, 정처기, agile, 애자일, 개발 기법, xp, extreme programming, 익스트림 프로그래밍, user story, 사용자 스토리, release planning, 릴리즈 계획 수립, spike, 스파이크, iteration, 이터레이션, acceptance test, 승인 검사, small release, 소규모 릴리즈, pair programming, 짝 프로그래밍, test-driven development, tdd, 테스트 주도 개발, whole team, 전체 팀, continuous integration, 계속적인 통합, design improvement, 디자인 개선, refactoring, 리팩토링]
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
