포스트 추가 - #48

--- a/_posts/2024-04-22-40.md
+++ b/_posts/2024-04-22-40.md
@@ -6,6 +6,7 @@ tags: [정보처리기사, 정처기, agile, 애자일, 개발 기법, xp, extre
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### XP(eXtreme programming)
