--- a/_posts/2024-04-23-41.md
+++ b/_posts/2024-04-23-41.md
@@ -6,6 +6,7 @@ tags: [정보처리기사, 정처기, 현행 시스템 파악, 시스템 구성 
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### 현행 시스템 파악 절차
