--- a/_posts/2024-04-25-47.md
+++ b/_posts/2024-04-25-47.md
@@ -2,10 +2,11 @@
 title: "[정보처리기사] #1 ~ #9 예상 기출 문제"
 date: 2024-04-25 17:51:00 +0900
 categories: [정보처리기사]
-tags: [정보처리기사, 정처기]
+tags: [정보처리기사, 정처기, 기출 문제, 예상 기출 문제, 소프트웨어 생명 주기, software life cycle, waterfall, waterfall model, 폭포수 모형, prototype, prototype model, 프로토타입 모델, spiral, spiral model, 나선형 모델, agile, agile programming, 애자일, 애자일 기법, scrum, 스크럼, user story, 요구사항, backlog, 백로그, extreme programming, xp, open source, 오픈 소스, uml, unified modeling language, relationship, 관계, association, 연관 관계, generalization, 일반화 관계, aggregation, 집단화 관계, dependency, 의존 관계]
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### 1. 소프트웨어 생명 주기(Life Cycle) 모델 중 아래 보기가 설명하는 모형은?
