--- a/_posts/2024-04-23-42.md
+++ b/_posts/2024-04-23-42.md
@@ -6,6 +6,7 @@ tags: [정보처리기사, 정처기, os, operating system, 운영체제, dbms, 
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### 개발 기술 환경의 정의
