--- a/_posts/2024-04-23-43.md
+++ b/_posts/2024-04-23-43.md
@@ -6,6 +6,7 @@ tags: [정보처리기사, 정처기, requirements, 요구사항, functional req
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### 1. 요구사항의 개념 및 특징
