--- a/_posts/2024-04-24-45.md
+++ b/_posts/2024-04-24-45.md
@@ -6,6 +6,7 @@ tags: [정보처리기사, 정처기, 요구사항 확인 기법, requirements r
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
+published: false
 ---
 
 ### 1. 요구사항 확인 기법
