--- a/_posts/2024-04-29-59.md
+++ b/_posts/2024-04-29-59.md
@@ -200,7 +200,7 @@ published: false
             <td>정확성, 완결성</td>
             <td>
                 요구사항과 요구사항을 구현하기 위해 발생하는 <br>
-                제약사항들을 모두 충족시기는 것을 의미합니다.
+                제약사항들을 모두 충족시키는 것을 의미합니다.
             </td>
         </tr>
         <tr>
