--- a/_posts/2024-05-03-67.md
+++ b/_posts/2024-05-03-67.md
@@ -2,7 +2,7 @@
 title: "[정보처리기사] #27 시스템 인터페이스 요구사항 분석"
 date: 2024-05-03 18:29:00 +0900
 categories: [정보처리기사]
-tags: [정보처리기사, 정처기]
+tags: [정보처리기사, 정처기, 시스템 인터페이스 요구사항, 요구사항 명세서, 시스템 기능, 데이터, 인터페이스, 품질, 요구사항 분석, 기능적 요구사항, 비기능적 요구사항]
 image:
     path: /assets/img/2024-04-22-38/2024-04-22-38-1.jpg
     alt: 시나공 정보처리기사 필기
